# Stock-Analyser

./: .gitignore  README.md  app.py  pyproject.toml
backend/: README.md
backend/api/: __init__.py
backend/api/routes/: validation.py  websocket.py
backend/core/: __init__.py  config.py
backend/models/: __init__.py  requests.py
backend/services/: __init__.py  stock_analysis.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: index.js
frontend/src/components/AnalysisForm/: AnalysisForm.css  AnalysisForm.js
frontend/src/components/Header/: Header.css  Header.js
frontend/src/components/LLMSelector/: LLMSelector.css  LLMSelector.js
frontend/src/components/ProgressBar/: ProgressBar.css  ProgressBar.js
frontend/src/components/ReportDisplay/: ReportDisplay.css  ReportDisplay.js
frontend/src/components/TickerInput/: TickerInput.css  TickerInput.js
frontend/src/constants/: config.js
frontend/src/hooks/: index.js  useLLMProvider.js  useStockAnalysis.js  useTickerValidation.js
frontend/src/utils/: api.js  validation.js  websocket.js
src/stock_analyser/: crew.py  main.py  test_crew.py
src/stock_analyser/config/: agents.yaml  tasks.yaml
src/stock_analyser/tools/: __init__.py  alpha_vantage_tools.py  finnhub_tools.py  technical_analysis_tools.py  visualization_tools.py
src/stock_analyser/utils/: logger.py
src/stock_annalyzer/: crew.py  main.py
src/stock_annalyzer/config/: agents.yaml
