[project]
name = "stock_analyser"
version = "0.1.0"
description = "A stock analysis system"
authors = [{ name = "Kartik Khandelwal", email = "kartik.khandelwal@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "finnhub-python",
    "matplotlib",
    "pandas",
    "pillow",
    "scikit-learn",
    "python-dotenv",
    "TA-Lib",
    "crewai[anthropic,google-genai,openai]",
    "crewai_tools",
    "anthropic",
    "openai",
    "fastapi[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

